# shuttle-template-actix

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
src/: main.rs
src/lib/: lib.rs  startup.rs
src/lib/instrumentation/: mod.rs
src/lib/routes/: health_check.rs  mod.rs  not_found.rs
tests/api/: health_check.rs
