[package]
name = "actix-template"
version = "1.1.2"
edition = "2021"
description = "Template for an Actix server app, hosted on Shuttle"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev"]
repository = "https://github.com/sentinel1909/shuttle-template-actix"
license = 'MIT'
keywords = ["actix, shuttle"]
categories = ["template"]
publish = false

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
shuttle-actix-web = "0.31.0"
shuttle-runtime = { version = "0.31.0", default-features = false }
tokio = "1.33.0"
tracing = "0.1.40"
tracing-actix-web = "0.7.8"
tracing-subscriber = "0.3.17"
